--- a/index.html
+++ b/index.html
@@ -183,8 +183,6 @@
   <div class="container">
     <img src="logo.png" alt="Straba Logo" class="logo">
     <h1>Straba Installer</h1>
-    <p class="subtitle">Firmware für dein Wiener Linien Display</p>
-
     <div class="announcement">
       <div class="announcement-header">
         🎉 Neu: Software-Version 1.1
@@ -200,7 +198,7 @@
     
     <esp-web-install-button manifest="manifest.json">
       <button class="install-button" slot="activate">
-        ⚡ Firmware installieren
+        Firmware installieren
       </button>
       <span slot="unsupported">
         <div class="warning">
