--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
     
     <esp-web-install-button manifest="manifest.json">
       <button class="install-button" slot="activate">
-        Firmware installieren
+        Update installieren
       </button>
       <span slot="unsupported">
         <div class="warning">
@@ -212,7 +212,7 @@
       <h3>📋 So geht's:</h3>
       <ol>
         <li>Straba mit einem <strong>USB-A auf USB-C Kabel</strong> an den Computer anschließen</li>
-        <li>Oben auf <strong>"Firmware installieren"</strong> klicken</li>
+        <li>Oben auf <strong>"Update installieren"</strong> klicken</li>
         <li>Im Popup den <strong>USB-Port</strong> auswählen</li>
         <li>Warten bis die Installation abgeschlossen ist</li>
         <li>Fertig! Straba startet automatisch neu 🎉</li>
