--- a/index.html
+++ b/index.html
@@ -274,6 +274,13 @@
           <div class="step">
             <div class="step-number">5</div>
             <div class="step-content">
+              <p>Bei <strong>"Confirm Installation"</strong> auf <strong>Install</strong> klicken</p>
+            </div>
+          </div>
+
+          <div class="step">
+            <div class="step-number">6</div>
+            <div class="step-content">
               <p>Warten bis fertig – Straba startet automatisch neu 🎉</p>
             </div>
           </div>
