--- a/index.html
+++ b/index.html
@@ -260,26 +260,33 @@
           <div class="step">
             <div class="step-number">3</div>
             <div class="step-content">
-              <p><strong>"Install Version 1.1"</strong> auswählen, dann im Browser den USB-Port wählen</p>
+              <p>Den <strong>"Straba" USB-Port</strong> wählen (oft genannt J-Tag)</p>
             </div>
           </div>
 
           <div class="step">
             <div class="step-number">4</div>
             <div class="step-content">
-              <p>Bei <strong>"Erase device"</strong> einfach auf <strong>Next</strong> klicken (nicht ankreuzen!)</p>
+              <p><strong>"Install Version 1.1"</strong> auswählen</p>
             </div>
           </div>
 
           <div class="step">
             <div class="step-number">5</div>
             <div class="step-content">
-              <p>Bei <strong>"Confirm Installation"</strong> auf <strong>Install</strong> klicken</p>
+              <p>Bei manchen Browsern kommt <strong>"Erase device"</strong> – einfach auf <strong>Next</strong> klicken (nicht ankreuzen!)</p>
             </div>
           </div>
 
           <div class="step">
             <div class="step-number">6</div>
+            <div class="step-content">
+              <p>Bei <strong>"Confirm Installation"</strong> auf <strong>Install</strong> klicken</p>
+            </div>
+          </div>
+
+          <div class="step">
+            <div class="step-number">7</div>
             <div class="step-content">
               <p>Warten bis fertig – Straba startet automatisch neu 🎉</p>
             </div>
