--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
 
     <div class="footer">
       <span>Funktioniert mit Chrome, Edge und Opera</span>
-      <span>Firmware Version 1.1.0</span>
+      <span>Version 1.1</span>
     </div>
   </div>
 </body>
